2002-06-21  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* aux/GNUmakefile: new search paths for "update" target.

	* config.guess, config.sub, doc/texinfo.tex, ltmain: updates from
	the latest GNU distributions.

	* mdate-sh: new script for autotools.

2002-06-11  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* amd/amfs_auto.c (amfs_auto_lookup_child): split part of this
	function into the new amfs_auto_lookup_one_child function; return
	null if all ivecs failed to match

2002-05-30  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* config.guess.long: support SuSE version names in long
	config.guess format.

2002-05-01  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* scripts/lostaltmail.in (vrfy_user): unlink temp files if too
	small.

2002-04-07  Ion Badulescu  <ionut@moisil.badula.org>

	* hlfsd/hlfsd.c (main): compile fix for --enable-debug=no

2002-03-29  Ion Badulescu  <ionut@moisil.badula.org>

	* README.autofs: solaris 2.5/2.5.1 info, other minor changes

	* doc/am-utils.texi (History): document solaris 2.5+ support

	* include/am_utils.h: new member in struct mntfs: mfs_real_mount;
	autofs_fs_flags becomes conditional of HAVE_AUTOFS_FS; new
	prototype for umount_fs2(); extra argument for UMOUNT_FS()

	* hlfsd/hlfsd.c: use the new mount_fs2() and UMOUNT_FS()

	* libamu/mount_fs.c (mount_fs): wrapper around the new mount_fs2()
	function; swap mntdir and real_mntdir as necessary for solaris 2.5
	autofs support

	* conf/umount/umount_default.c (umount_fs2): swap mntdir and
	real_mntdir as necessary for solaris 2.5 autofs support

	* conf/umount/umount_*.c (umount_fs): wrapper around the new
	umount_fs2() function
	(umount_fs2): new function which takes the real mountpoint as an
	extra argument

	* conf/nfs_prot/nfs_prot_sunos5_5.h: allow autofs support to be
	compiled in

	* conf/autofs/autofs_solaris_v1.h (autofs_strdup_space_hack): new
	function that appends a space at the end of a string (the famous
	"Autofs Space Protocol")
