@@ -94,3 +94,4 @@ A.i386-pc-linuxlibc1-rh4.2
 A.i386-pc-solaris2.8
 A.i386-unknown-freebsd4.5
 A.i386-unknown-openbsd2.9
+A.i386-pc-linux-rh7.3
