@@ -1,9 +1,9 @@
 dnl ######################################################################
 dnl Do we want to compile with "ADDON" support? (hesiod, ldap, etc.)
 AC_DEFUN(AMU_WITH_ADDON,
-AC_MSG_CHECKING([if $1 is wanted])
+[AC_MSG_CHECKING([if $1 is wanted])
 ac_upcase=`echo $1|tr 'abcdefghijklmnopqrstuvwxyz' 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'`
-[AC_ARG_WITH($1,
+AC_ARG_WITH($1,
  AC_HELP_STRING([--with-$1],
 		[enable $2 support (default=yes if found)]
 ),[
@@ -24,4 +24,3 @@ else
   AC_MSG_RESULT([no])
 fi
 ])
-
